Wrap guide and subtle UI styles fixed.

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -90,6 +90,10 @@ atom-text-editor.is-focused {
       0px 3px 2px rgba(255,255,255,0.5);
 }
 
+.syntax--attribute-name.syntax--class.syntax--css {
+    color: @light-gray;
+}
+
 .syntax--variable.syntax--language {
     font-style: italic;
     color: #777;
