--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,10 +1,10 @@
 // These colors are specific to the theme. Do not use in a package!
 
-@very-light-gray: #c5c8c6;
-@light-gray: #969896;
+@very-light-gray: #c6c6c6;
+@light-gray: #989898;
 @gray: #444;
-@dark-gray: #282a2e;
-@very-dark-gray: #1d1f21;
+@dark-gray: #282828;
+@very-dark-gray: #111;
 
 @cyan: #8abeb7;
 @blue: #81a2be;
