--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -5,7 +5,7 @@
 @syntax-background-color: rgba(31, 31, 31, 1);
 
 // Guide colors
-@syntax-wrap-guide-color: rgba(104, 104, 104, 0.05);
+@syntax-wrap-guide-color: rgba(104, 104, 104, 0.15);
 @syntax-indent-guide-color: rgba(104, 104, 104, 0.15);
 @syntax-invisible-character-color: rgba(104, 104, 104, 0.15);
 
